--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -102,7 +102,7 @@ layout: default
 
 
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 var duoshuoQuery = {short_name:"cnfeat"};
     (function() {
         var ds = document.createElement('script');
@@ -112,7 +112,7 @@ var duoshuoQuery = {short_name:"cnfeat"};
         (document.getElementsByTagName('head')[0]
          || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
-</script>
+</script> -->
 <!-- 多说公共JS代码 end -->
 
 <!-- async load function -->
